# Personal-Information-Library

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
backend/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  run.py  test_implementation.py
backend/app/: config.py  database.py  main.py
backend/app/api/: categories.py  feedback.py  interest_discovery.py  interest_points.py  notification_channels.py  notification_rules.py  plugins.py  refine.py  results.py  sources.py  tasks.py
backend/app/core/: crawler.py  interest_discoverer.py  notifier.py  refiner.py  scheduler.py
backend/app/core/notifiers/: __init__.py  base.py  feishu.py  telegram.py  webhook.py
backend/app/models/: __init__.py  category.py  interest.py  notification.py  plugin.py  result.py  source.py  task.py  task_log.py
backend/app/plugins/: base.py  generic.py  rss.py
backend/app/schemas/: category.py  interest.py  notification.py  plugin.py  result.py  source.py  task.py
backend/tests/: README.md  conftest.py  test_models.py  test_plugins.py
docs/: PRD.md  architecture.md  project-summary.md  test-plan.md  tmux-guide.md
docs/plans/: 2026-03-13-category-notification-interest-design.md  2026-03-17-category-enhancement-design.md  2026-03-17-category-enhancement-implementation.md  2026-03-17-notification-management-design.md  2026-03-17-notification-management-research.md  interest-graph-design.md  interest-graph-prd.md  notification-todo.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
(+16 files in other folders)
